Adds more katas content